rust-server/kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: rust-app
  name: rust-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rust-app
  template:
    metadata:
      labels:
        app: rust-app
    spec:
      containers:
        - image: betterptdev/rust-app:latest
          name: rust-app
          ports:
            - name: http
              containerPort: 8080
      # imagePullSecrets:
      # - name: registry-esys
