rust-server/kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: rust-app
  name: rust-app
spec:
  ports:
    - name: http
      port: 8080
      targetPort: http
  selector:
    app: rust-app
  type: ClusterIP
